Spacing of bottom container and button fixed

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,8 @@ p {
     flex-grow: 1;
     text-align: center;
     padding: 2% 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 10%;
 }
 
 button {
